--- a/index.html
+++ b/index.html
@@ -144,12 +144,11 @@
         <table>
             <tbody>
             <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/BodySys'24.pdf">
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/BodySys'24.pdf">
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
                 <td><span class="title">Detecting Foot Strikes during Running with Earbuds</span>
                     <br/><b>Changshuo Hu</b>, Thivya Kandappu, Jake Stuchbury-Wass, Yang Liu, Anthony Tang, Cecilia Mascolo, Dong Ma
-
                     <br/>10th Workshop on Body-Centric Computing Systems, Co-located with ACM MobiSys 2024
                 </td>
             </tr>
@@ -159,18 +158,72 @@
         <table>
             <tbody>
             <tr>
-                <td class="left"><a target="_blank" href="https://zhixinma.github.io/papers/BodySys'24.pdf">
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/IMWUT'23.pdf">
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
-                <td><span class="title">Detecting Foot Strikes during Running with Earbuds</span>
-                    <br/><b>Changshuo Hu</b>, Thivya Kandappu, Jake Stuchbury-Wass, Yang Liu, Anthony Tang, Cecilia Mascolo, Dong Ma
-
-                    <br/>10th Workshop on Body-Centric Computing Systems, Co-located with ACM MobiSys 2024
+                <td><span class="title">BreathPro: Monitoring Breathing Mode during Running with Earables</span>
+                    <br/><b>Changshuo Hu</b>, Thivya Kandappu, Yang Liu, Cecilia Mascolo, Dong Ma
+                    <br/>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, 2024
                 </td>
             </tr>
             </tbody>
         </table>
 
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/HotMobile'23.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Lightweight and Non-Invasive User Authentication on Earables</span>
+                    <br/><b>Changshuo Hu</b>, Xiao Ma, Dong Ma, Ting Dang
+                    <br/>Proceedings of the 24th International Workshop on Mobile Computing Systems and Applications, 2023
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/TMC'22.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Recognizing hand gestures using solar cells</span>
+                    <br/>Dong Ma, Guohao Lan, <b>Changshuo Hu</b>, Mahbub Hassan, Wen Hu, Mushfika B Upama, Ashraf Uddin, Moustafa Youssef
+                    <br/>IEEE Transactions on Mobile Computing, 2022
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/IPSN'20.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Data Communication using Switchable Privacy Glass</span>
+                    <br/><b>Changshuo Hu</b>, Dong Ma, Mahbub Hassan, Wen Hu
+                    <br/>19th ACM/IEEE International Conference on Information Processing in Sensor Networks (IPSN), 2020
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/Infocom'20.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Nlc: natural light communication using switchable glass</span>
+                    <br/><b>Changshuo Hu</b>, Dong Ma, Mahbub Hassan, Wen Hu
+                    <br/>IEEE INFOCOM 2020-IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
         
 
