--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/Infocom'20.pdf">
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
-                <td><span class="title">Nlc: natural light communication using switchable glass</span>
+                <td><span class="title">NLC: natural light communication using switchable glass</span>
                     <br/><b>Changshuo Hu</b>, Dong Ma, Mahbub Hassan, Wen Hu
                     <br/>IEEE INFOCOM 2020-IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)
                 </td>
