--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h2>News</h2><br>
         <font size="4px">
 
+	    <b>Oct. 2024</b><br/>
+            <span class="easylink">
+                Our paper "<i>LR-Auth: Towards Practical Implementation of User Authentication on Earbudss</i>" was accepted by <b>IMWUT 2024</b>.
+            </span><br/><br/>
+
             <b>May. 2024</b><br/>
             <span class="easylink">
                 Our paper "<i>Detecting Foot Strikes during Running with Earbuds</i>" was accepted by <b>BodySys 2024</b>.
