--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <tr>
                 <td><span class="title">University of New South Wales </span> <br/>
                     Master in Information System &emsp; Jan. 2018 - Jan 2020, Sydney, Australia<br>
-                    Advisor: <a href="https://www.cse.unsw.edu.au/~mahbub/" target="_blank">Mahbub Hassan</a>
+                    Advisor: Prof. <a href="https://www.cse.unsw.edu.au/~mahbub/" target="_blank">Mahbub Hassan</a>
                 </td>
             </tr>
         </table>
