--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
             </tr>
         </table>
 
-        <h2 style="CLEAR: both">Experiences</h2>
+<!--         <h2 style="CLEAR: both">Experiences</h2>
         <table>
             <tr>
-                <td><span class="title">National University of Singapore</span> <br/>
+                <td><span class="title">Singapore Management University</span> <br/>
                     Research Assistant&emsp;&emsp;&emsp; <a href="https://www.nextcenter.org/" target="_blank">NExT++ Research Centre</a>,
                     Jan. 2019 - July 2020, Singapore<br/>
                     Advisor: <a href="https://sites.google.com/view/wenqianghome/home" target="_blank">Dr. Wenqiang Lei</a> and
                     <a href="https://www.comp.nus.edu.sg/cs/bio/chuats/" target="_blank">Prof. Tat-Seng Chua</a>
                 </td>
             </tr>
-        </table>
+        </table> -->
 
 <!--        <table>-->
 <!--            <tbody>-->
