--- a/index.html
+++ b/index.html
@@ -237,14 +237,10 @@
         <table>
             <tbody>
                 <tr> <td>
-<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Multimedia</b>-->
-<!--                    <li>Invited Reviewer for <b>ACM Transactions on the Web</b>-->
-<!--                    <li>Invited Reviewer for <b>IEEE Transactions on Circuits and Systems for Video Technology</b>-->
-                    <li>Invited Reviewer for <b>TMM, TKDE, TCSVT, TWeb, TIST</b>
-                    <li>Invited Reviewer for <b>ACM MM 2023-2024</b>, <b>ACL 2023</b>, <b>EMNLP 2021-2023</b>
-                    <li>Program Committee Member of <b>EMNLP 2023</b>
-                    <li>Volunteer of <b>ACM MM 2022</b>, <b>WWW 2024 (as photographer)</b>
-<!--                    <li>Invited Reviewer for <b>China MM 2020</b>-->
+                    <li>Invited Reviewer for <b>WWW, MobiCom, IMWUT</b>
+		    <li>Website Chair at <a href="https://www.eventcreate.com/e/bodysys24" target="_blank">BodySys Workshop 2024</a>, co-located with <a href="https://www.sigmobile.org/mobisys/2024/" target="_blank">MobiSys 2024</a>.</b>
+                    <li>Website Chair at <a href="https://smart-wear-2023-bjfs.vercel.app/" target="_blank">SmartWear Workshop 2023</a>, co-located with <a href="https://sigmobile.org/mobicom/2023/" target="_blank">MobiCom 2023</a>.</b>
+
                 </td> </tr>
             </tbody>
         </table>
