--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 <!--        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=67838b&w=180&t=tt&d=CzFsHyGcEKu0jw0tBfHmROhxIIwb-byYnC7FD-24spA&co=ffffff&ct=777777'></script>-->
         <br>
-        <p style="font-size:15px;font-family:serif;">Last update: Mar. 2024.</p>
+<!--         <p style="font-size:15px;font-family:serif;">Last update: Mar. 2024.</p> -->
     </div>
 
 </div>
