--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <tbody>
             <tr nosave="">
                 <td valign="CENTER">
-                    <img src="./images/profile.jpg" height="220" align="left">
+                    <img src="./images/xing.jpg" height="220" align="left">
                 </td>
 
                 <td valign="CENTER" align="left" size="+0">
