--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	    <b>Oct. 2024</b><br/>
             <span class="easylink">
-                Our paper "<i>LR-Auth: Towards Practical Implementation of User Authentication on Earbuds</i>" was accepted by <b>IMWUT 2024</b>.
+                Our paper "<i>LR-Auth: Towards Practical Implementation of Implicit User Authentication on Earbuds</i>" was accepted by <b>IMWUT 2024</b>.
             </span><br/><br/>
 
             <b>May. 2024</b><br/>
@@ -157,7 +157,7 @@
                 <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/IMWUT'25.pdf">
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
-                <td><span class="title">LR-Auth: Towards Practical Implementation of User Authentication on Earbuds</span>
+                <td><span class="title">LR-Auth: Towards Practical Implementation of Implicit User Authentication on Earbuds</span>
                     <br/><b>Changshuo Hu</b>, Xiao Ma, Xinger Huang, Yiran Shen, Dong Ma
                     <br/>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, 2024
                 </td>
