--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             80 Stamford Road, Singapore 178902<br/>
                         </p>
                         <p style="margin-left:0px;">
-                            laserhu16 AT gmail DOT com</a><br/>
+                            cs.hu.2023@phdcs.smu.edu.sg</a><br/>
 <!--                            <a href="files/CV_MaZhixin.pdf">CV</a> &bull;-->
                             <a href="https://scholar.google.com/citations?user=Hp_wzA0AAAAJ&hl=en" target="_blank">Google Scholar</a> ⋅
                             <a href="https://github.com/LaserHu" target="_blank">GitHub</a> ⋅
