--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <div id="news">
         <h2>News</h2><br>
         <font size="4px">
+
+	    <b>Apr. 2025</b><br/>
+            <span class="easylink">
+                I passed the Ph.D. qualifying examination and officially became a Ph.D. candidate.
+            </span><br/><br/>
 		
 	    <b>Nov. 2024</b><br/>
             <span class="easylink">
@@ -44,7 +49,7 @@
 
             <b>Jan 2024</b><br/>
             <span class="easylink">
-                I was admitted into Ph.D. in Computer Science programme as a full-time student commencing in Jan 2024,
+                I was admitted into the Ph.D. in Computer Science programme as a full-time student commencing in Jan 2024,
                 <a href="https://www.smu.edu.sg/" target="_blank"> Singapore Management University </a>.
             </span><br/><br/>
 
