--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <h2>About Me</h2> <br/>
         <p id="profile" style="margin-left:0px;">
-			Hu Changshuo is currently a Ph.D. student in Computer Science at Singapore Management University, under the supervision of 
+			Hu Changshuo is currently a Ph.D. candidate in Computer Science at Singapore Management University, under the supervision of 
 			Professor <a href="https://www.dongma.info/" target="_blank">Ma Dong</a>. His research interests 
 			encompass mobile computing and pervasive sensing, with a particular focus on authentication, running monitoring, and 
 			interaction using earables.
