--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                         </p>
                         <p style="margin-left:0px;">
                             cs.hu.2023@phdcs.smu.edu.sg</a><br/>
-                            <a href="https://scholar.google.com/citations?user=Hp_wzA0AAAAJ&hl=en" target="_blank">Google Scholar</a> &bull
-                            <a href="https://github.com/LaserHu" target="_blank">GitHub</a> &bull
+                            <a href="https://scholar.google.com/citations?user=Hp_wzA0AAAAJ&hl=en" target="_blank">Google Scholar</a> ·
+                            <a href="https://github.com/LaserHu" target="_blank">GitHub</a> ·
 			    <a href="files/CV_ChangshuoHU_May_2025.pdf">CV</a>;
                         </p>
                     </font>
