--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h2>News</h2><br>
         <font size="4px">
 
+	    <b>July. 2025</b><br/>
+            <span class="easylink">
+                I was selected as an award winner for the SMU <b>Presidential Doctoral Fellowship </b>.
+            </span><br/><br/>
+
 	    <b>Apr. 2025</b><br/>
             <span class="easylink">
                 I passed the Ph.D. qualifying examination and officially became a Ph.D. candidate.
