--- a/index.html
+++ b/index.html
@@ -306,23 +306,12 @@
         <h2 style="CLEAR: both">Honors <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
-                <td><span class="title">SMU Presidential Doctoral Fellowship </span>, AY2023 </td>
+                <td><span class="title">SMU Presidential Doctoral Fellowship </span>, AY2025 </td>
             </tr> </tbody>
             <tbody> <tr>
-                <td><span class="title">Dean's List of School of Computing and Information Systems (SCIS)</span>, AY2023</td>
+                <td><span class="title">PhD Full Scholarship</span>, AY2024</td>
             </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2023</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">ACM Multimedia Top Rated Paper Award</span>, AY2022</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">ACM Multimedia Student Travel Grant</span>, AY2022</td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">The 3rd price in Video Browsing Showdown (VBS)</span>, 2021</td>
-            </tr> </tbody>
+
 
 
         </table>
