--- a/index.html
+++ b/index.html
@@ -277,29 +277,10 @@
         </table>
 
 
-        <h2 style="CLEAR: both">Invited Talk <a href="" target="_blank"></a></h2><br/>
-        <table>
-            <tbody> <tr>
-                <!-- <td class="left"><a target="_blank" href="https://zhixinma.github.io/invited_talk/1_Feb_2023_NExT_NUS.pdf"> -->
-                <td class="left"><a target="_blank">
-		<img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
-                </td>
-                <td><span class="title">Reinforcement Learning Enhanced Interactive Video Retrieval</span>
-                    <br/>1 Feb. 2023 at NExT Research Centre, NUS
-                </td>
-            </tr> </tbody>
-        </table>
-
         <h2 style="CLEAR: both">Teaching Assistants <a href="" target="_blank"></a></h2><br/>
         <table>
             <tbody> <tr>
-                <td><span class="title">IS446: Managing Customer Relations with Analytics: Asian Insights</span> <br/>Term 1, AY2023-2024 </td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">CS702: Computational Interaction </span> <br/>Term 2, AY2022-2023 </td>
-            </tr> </tbody>
-            <tbody> <tr>
-                <td><span class="title">CS601: Introduction to Artificial Intelligence</span> <br/>Term 1, AY2021-2022 </td>
+                <td><span class="title">IS460: Machine Learning and Applications</span> <br/>AY2025-26 Term 1</td>
             </tr> </tbody>
         </table>
 
