--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h2>News</h2><br>
         <font size="4px">
 
+	    <b>July. 2024</b><br/>
+            <span class="easylink">
+                Our paper "<i>Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</i>" was accepted by <b>BodySys 2025</b>.
+            </span><br/><br/>
+
 	    <b>July. 2025</b><br/>
             <span class="easylink">
                 I was selected as an award winner for the SMU <b>Presidential Doctoral Fellowship </b>.
@@ -162,6 +167,20 @@
 
 
         <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2><br/>
+
+	<table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/BodySys'25.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</span>
+                    <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Dong Ma
+                    <br/>11th Workshop on Body-Centric Computing Systems, Co-located with UbiComp / ISWC 2025
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
 	<table>
             <tbody>
