--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			    cs.hu.2023@phdcs.smu.edu.sg<br/>
 			    <a href="https://scholar.google.com/citations?user=Hp_wzA0AAAAJ&hl=en" target="_blank">Google Scholar</a> ·
 			    <a href="https://github.com/LaserHu" target="_blank">GitHub</a> ·
-			    <a href="files/CV_ChangshuoHU_May_2025.pdf">CV</a>
+			    <a href="files/Academic CV.pdf">CV</a>
 			</p>
                     </font>
                 </td>
