--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h2>News</h2><br>
         <font size="4px">
 
+		<b>Sept. 2025</b><br/>
+            <span class="easylink">
+                Our paper "<i>From Cheap to Chic: Enhancing Music Playback Quality of Budget Earphones via Hardware-Aware Learning</i>" was accepted by <b>SenSys 2026</b>.
+            </span><br/><br/>
+
 	    <b>July. 2025</b><br/>
             <span class="easylink">
                 Our paper "<i>Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</i>" was accepted by <b>BodySys 2025</b>.
@@ -168,7 +173,21 @@
 
         <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2><br/>
 
-	<table>
+		<table>
+            <tbody>
+            <tr>
+                <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/SenSys'26.pdf">
+                    <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
+                </td>
+                <td><span class="title">From Cheap to Chic: Enhancing Music Playback Quality of Budget Earphones via Hardware-Aware Learning</span>
+                    <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Ting Dang, Jiannan Li, Rajesh Balan, Dong Ma
+                    <br/>ACM/IEEE International Conference on Embedded Artificial Intelligence and Sensing Systems
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+		<table>
             <tbody>
             <tr>
                 <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/BodySys'25.pdf">
@@ -182,7 +201,7 @@
             </tbody>
         </table>
 
-	<table>
+		<table>
             <tbody>
             <tr>
                 <td class="left"><a target="_blank" href="https://laserhu.github.io/profile/papers/IMWUT'25.pdf">
