--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -20,9 +20,19 @@
         <h2>News</h2><br>
         <font size="4px">
 
+		<b>Oct. 2025</b><br/>
+            <span class="easylink">
+                Our IMWUT paper won the <b>Distinguished Paper Award</b>.
+            </span><br/><br/>
+
+		<b>Oct. 2025</b><br/>
+            <span class="easylink">
+                Our BodySys paper won the <b>Best Paper Award</b>.
+            </span><br/><br/>
+
 		<b>Sept. 2025</b><br/>
             <span class="easylink">
-                Our paper "<i>From Cheap to Chic: Enhancing Music Playback Quality of Budget Earphones via Hardware-Aware Learning</i>" was accepted by <b>SenSys 2026</b>.
+                Our paper "<i>From Cheap to Chic: Enhancing Music Playback Quality of Budget Earphones via Hardware-Aware Learning</i>" was conditionally accepted by <b>SenSys 2026</b>.
             </span><br/><br/>
 
 	    <b>July. 2025</b><br/>
@@ -196,6 +206,7 @@
                 <td><span class="title">Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</span>
                     <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Dong Ma
                     <br/>11th Workshop on Body-Centric Computing Systems, Co-located with UbiComp / ISWC 2025
+					<b><span style="color:blue">Best Paper Award</span>
                 </td>
             </tr>
             </tbody>
@@ -210,6 +221,7 @@
                 <td><span class="title">LR-Auth: Towards Practical Implementation of Implicit User Authentication on Earbuds</span>
                     <br/><b>Changshuo Hu</b>, Xiao Ma, Xinger Huang, Yiran Shen, Dong Ma
                     <br/>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, 2024
+					<b><span style="color:blue">Distinguished Paper Award</span>
                 </td>
             </tr>
             </tbody>
