--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ c<!DOCTYPE html>
 
 		<b>Oct. 2025</b><br/>
             <span class="easylink">
-                Our IMWUT paper won the <b>Distinguished Paper Award</b>.
+                Our IMWUT paper won the <b>Distinguished Paper Award</b>. Congratulations to all co-authors!
             </span><br/><br/>
 
 		<b>Oct. 2025</b><br/>
             <span class="easylink">
-                Our BodySys paper won the <b>Best Paper Award</b>.
+                Our BodySys paper won the <b>Best Paper Award</b>. Congratulations to all co-authors!
             </span><br/><br/>
 
 		<b>Sept. 2025</b><br/>
@@ -206,7 +206,7 @@ c<!DOCTYPE html>
                 <td><span class="title">Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</span>
                     <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Dong Ma
                     <br/>11th Workshop on Body-Centric Computing Systems, Co-located with UbiComp / ISWC 2025
-					<b><span style="color:blue">Best Paper Award</span>
+					<br/><b><span style="color:blue">Best Paper Award</span>
                 </td>
             </tr>
             </tbody>
@@ -221,7 +221,7 @@ c<!DOCTYPE html>
                 <td><span class="title">LR-Auth: Towards Practical Implementation of Implicit User Authentication on Earbuds</span>
                     <br/><b>Changshuo Hu</b>, Xiao Ma, Xinger Huang, Yiran Shen, Dong Ma
                     <br/>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, 2024
-					<b><span style="color:blue">Distinguished Paper Award</span>
+					<br/><b><span style="color:blue">Distinguished Paper Award</span> 
                 </td>
             </tr>
             </tbody>
