--- a/index.html
+++ b/index.html
@@ -336,6 +336,12 @@ c<!DOCTYPE html>
 
         <h2 style="CLEAR: both">Honors <a href="" target="_blank"></a></h2><br/>
         <table>
+			<tbody> <tr>
+                <td><span class="title">IMWUT Vol. 8 Distinguished Paper Award </span>, AY2025 </td>
+            </tr> </tbody>
+			<tbody> <tr>
+                <td><span class="title">Best Paper Award at BodySys'25 </span>, AY2025 </td>
+            </tr> </tbody>
             <tbody> <tr>
                 <td><span class="title">SMU Presidential Doctoral Fellowship </span>, AY2025 </td>
             </tr> </tbody>
