--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ c<!DOCTYPE html>
                 <td><span class="title">Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</span>
                     <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Dong Ma
                     <br/>11th Workshop on Body-Centric Computing Systems, Co-located with UbiComp / ISWC 2025
-					<br/><b><span style="color:blue">Best Paper Award</span>
+					<br/><b><span style="color:blue">Best Paper Award (1 out of 9 papers)</span>
                 </td>
             </tr>
             </tbody>
@@ -221,7 +221,7 @@ c<!DOCTYPE html>
                 <td><span class="title">LR-Auth: Towards Practical Implementation of Implicit User Authentication on Earbuds</span>
                     <br/><b>Changshuo Hu</b>, Xiao Ma, Xinger Huang, Yiran Shen, Dong Ma
                     <br/>Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, 2024
-					<br/><b><span style="color:blue">Distinguished Paper Award</span> 
+					<br/><b><span style="color:blue">Distinguished Paper Award (8 out of 208 papers)</span> 
                 </td>
             </tr>
             </tbody>
