--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ c<!DOCTYPE html>
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
                 <td><span class="title">From Cheap to Chic: Enhancing Music Playback Quality of Budget Earphones via Hardware-Aware Learning</span>
-                    <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Ting Dang, Jiannan Li, Rajesh Balan, Dong Ma
+                    <br/><b>Changshuo Hu*</b>, Hung Manh Pham*, Ting Dang, Jiannan Li, Rajesh Balan, Dong Ma
                     <br/>ACM/IEEE International Conference on Embedded Artificial Intelligence and Sensing Systems
                 </td>
             </tr>
@@ -204,7 +204,7 @@ c<!DOCTYPE html>
                     <img src="./images/pdf.png" width="25" height="25" alt=""><br/>pdf</a>
                 </td>
                 <td><span class="title">Morphology-Aware HRV Estimation from Wrist PPG in Sedentary Scenarios</span>
-                    <br/><b>Changshuo Hu*</b>, Manh Pham Hung*, Dong Ma
+                    <br/><b>Changshuo Hu*</b>, Hung Manh Pham*, Dong Ma
                     <br/>11th Workshop on Body-Centric Computing Systems, Co-located with UbiComp / ISWC 2025
 					<br/><b><span style="color:blue">Best Paper Award (1 out of 9 papers)</span>
                 </td>
