--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ c<!DOCTYPE html>
 
 		<b>Oct. 2025</b><br/>
             <span class="easylink">
-                Our IMWUT paper won the <b>Distinguished Paper Award</b>. Congratulations to all co-authors!
+                Our IMWUT paper won the <a href="https://dl.acm.org/journal/imwut/distinguished-paper-awards" target="_blank"> <b>Distinguished Paper Award</b> </a>. Congratulations to all co-authors!
             </span><br/><br/>
 
 		<b>Oct. 2025</b><br/>
